// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toggle /> should handle change event with space and enter when focused: checked and dirty 1`] = `
<div>
  <label
    class="junipero toggle-field checked dirty"
    tabindex="1"
  >
    <input
      tabindex="-1"
      type="checkbox"
      value="my_value"
    />
    <div
      class="inner"
    >
      <div
        class="handle"
      />
    </div>
    <div
      class="label"
    >
      label
    </div>
  </label>
</div>
`;

exports[`<Toggle /> should handle change event with space and enter when focused: unChecked and pristine 1`] = `
<div>
  <label
    class="junipero toggle-field pristine"
    tabindex="1"
  >
    <input
      tabindex="-1"
      type="checkbox"
      value="my_value"
    />
    <div
      class="inner"
    >
      <div
        class="handle"
      />
    </div>
    <div
      class="label"
    >
      label
    </div>
  </label>
</div>
`;

exports[`<Toggle /> should handle change event with space and enter when focused: unchecked and dirty 1`] = `
<div>
  <label
    class="junipero toggle-field dirty"
    tabindex="1"
  >
    <input
      tabindex="-1"
      type="checkbox"
      value="my_value"
    />
    <div
      class="inner"
    >
      <div
        class="handle"
      />
    </div>
    <div
      class="label"
    >
      label
    </div>
  </label>
</div>
`;

exports[`<Toggle /> should handle change event: checked and dirty 1`] = `
<div>
  <label
    class="junipero toggle-field checked dirty"
    tabindex="1"
  >
    <input
      tabindex="-1"
      type="checkbox"
      value="my_value"
    />
    <div
      class="inner"
    >
      <div
        class="handle"
      />
    </div>
    <div
      class="label"
    >
      label
    </div>
  </label>
</div>
`;

exports[`<Toggle /> should handle change event: unChecked and pristine 1`] = `
<div>
  <label
    class="junipero toggle-field pristine"
    tabindex="1"
  >
    <input
      tabindex="-1"
      type="checkbox"
      value="my_value"
    />
    <div
      class="inner"
    >
      <div
        class="handle"
      />
    </div>
    <div
      class="label"
    >
      label
    </div>
  </label>
</div>
`;

exports[`<Toggle /> should not handle change if toggle is disabled: unChecked and pristine 1`] = `
<div>
  <label
    class="junipero toggle-field disabled pristine"
    tabindex="1"
  >
    <input
      disabled=""
      tabindex="-1"
      type="checkbox"
      value="my_value"
    />
    <div
      class="inner"
    >
      <div
        class="handle"
      />
    </div>
    <div
      class="label"
    >
      label
    </div>
  </label>
</div>
`;

exports[`<Toggle /> should not handle change if toggle is disabled: unchecked and pristine 1`] = `
<div>
  <label
    class="junipero toggle-field disabled pristine"
    tabindex="1"
  >
    <input
      disabled=""
      tabindex="-1"
      type="checkbox"
      value="my_value"
    />
    <div
      class="inner"
    >
      <div
        class="handle"
      />
    </div>
    <div
      class="label"
    >
      label
    </div>
  </label>
</div>
`;

exports[`<Toggle /> should render 1`] = `
<div>
  <label
    class="junipero toggle-field pristine"
    tabindex="1"
  >
    <input
      tabindex="-1"
      type="checkbox"
      value=""
    />
    <div
      class="inner"
    >
      <div
        class="handle"
      />
    </div>
    <div
      class="label"
    />
  </label>
</div>
`;

exports[`<Toggle /> should render with children 1`] = `
<div>
  <label
    class="junipero toggle-field pristine"
    tabindex="1"
  >
    <input
      tabindex="-1"
      type="checkbox"
      value=""
    />
    <div
      class="inner"
    >
      <div
        class="handle"
      />
    </div>
    <div
      class="label"
    >
      label
    </div>
  </label>
</div>
`;

exports[`<Toggle /> should set disabled class if toggle is disabled 1`] = `
<div>
  <label
    class="junipero toggle-field disabled pristine"
    tabindex="1"
  >
    <input
      disabled=""
      tabindex="-1"
      type="checkbox"
      value=""
    />
    <div
      class="inner"
    >
      <div
        class="handle"
      />
    </div>
    <div
      class="label"
    >
      label
    </div>
  </label>
</div>
`;
